@@ -57,6 +57,7 @@ Stable versions
 	- Fix time tracking bugs in some complex pattern loop cases.
 	- Fix time tracking bugs when Bxx+Dxx jumps within the same position.
 	- S3M/IT: Cxx followed by Byy on the same row now jumps to pos Y row X.
+	- IT: fix importing channel initial panning for muted channels.
 	Changes by Alice Rowan and ds-sloth:
 	- Minor Impulse Tracker loader performance improvements.
 
